<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.suche</groupId>
	<artifactId>json</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Suche.org/json</name>
	<description>Fast JSON Parser and Serializer</description>

	<properties>
		<maven.compiler.release>26</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>1.37</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>1.37</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.21.2</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20251224</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>2.0.47</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
	                <!-- Optional change to remove space between - -
                    <argLine>- -add-opens java.base/java.lang=ALL-UNNAMED</argLine>
    	            -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version> <!-- Nutze eine aktuelle Version -->
                <executions>
                    <!-- 1. Regulärer Compile: Alles AUSSER der Preview-Klasse -->
                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
				        	<source>26</source>
				        	<target>26</target>
                            <excludes>
                                <exclude>**/JSONStringVectorAPI.java</exclude>
                            </excludes>
                            <compilerArgs>
        						<arg>-Xlint:unchecked</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-preview-class</id>
                        <phase>compile</phase>
                        <goals><goal>compile</goal></goals>
                        <configuration>
					        <source>26</source>
					        <target>26</target>
                            <includes>
                                <include>**/JSONStringVectorAPI.java</include>
                            </includes>
                            <compilerArgs>
        						<arg>-Xlint:unchecked</arg>
                                <arg>--enable-preview</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <source>${maven.compiler.release}</source>
                            <target>${maven.compiler.release}</target>
                            <!-- Falls deine Tests die VectorAPI direkt ansprechen, brauchst du das hier: -->
                            <compilerArgs>
                                <arg>--enable-preview</arg>
                                <arg>--add-modules</arg>
                                <arg>jdk.incubator.vector</arg>
                            </compilerArgs>
                            <annotationProcessorPaths>
                                <path>
                                    <groupId>org.openjdk.jmh</groupId>
                                    <artifactId>jmh-generator-annprocess</artifactId>
                                    <version>1.37</version>
                                </path>
                            </annotationProcessorPaths>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
			
			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>download-maven-plugin</artifactId>
				<version>1.6.8</version>
				<executions>
					<execution>
						<id>download-canada</id>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>wget</goal>
						</goals>
						<configuration>
							<url>
								https://raw.githubusercontent.com/miloyip/nativejson-benchmark/master/data/canada.json</url>
							<outputDirectory>
								${project.build.directory}/test-classes/</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>download-citm</id>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>wget</goal>
						</goals>
						<configuration>
							<url>
								https://raw.githubusercontent.com/miloyip/nativejson-benchmark/master/data/citm_catalog.json</url>
							<outputDirectory>
								${project.build.directory}/test-classes/</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>download-twitter</id>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>wget</goal>
						</goals>
						<configuration>
							<url>
								https://raw.githubusercontent.com/miloyip/nativejson-benchmark/master/data/twitter.json</url>
							<outputDirectory>
								${project.build.directory}/test-classes/</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.21.2</version>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<printFailingErrors>true</printFailingErrors>
					<rulesets>
						<ruleset>category/java/bestpractices.xml</ruleset>
						<ruleset>category/java/errorprone.xml</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.8.3.1</version>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>